@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.59
+Release: 0.60
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -116,6 +116,9 @@ shell-like rules.
 
 %build
 
+# XXX rpm needs functioning nptl for configure tests
+unset LD_ASSUME_KERNEL
+
 %if %{with_python_subpackage}
 WITH_PYTHON="--with-python=%{with_python_version}"
 %else
@@ -140,6 +143,9 @@ CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%{__prefix} $WITH_PYTHON \
 make
 
 %install
+# XXX rpm needs functioning nptl for configure tests
+unset LD_ASSUME_KERNEL
+
 rm -rf $RPM_BUILD_ROOT
 
 make DESTDIR="$RPM_BUILD_ROOT" install
@@ -464,6 +470,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Wed Jan 22 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.60
+- fix: debugedit.c problem.
+
 * Fri Jan 17 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.58
 - duplicate package checks with arch/os checks if colored.
 - file conflict checks with colors.
